force-app/main/default/objects/FIC_Survey_Application__c/FIC_Survey_Application__c.object-meta.xml
<CustomObject>
    <description>Stores data received from Grant and Donation applications submitted by non profit organizations in our communitieis</description>
    <label>FIC Survey Application</label>
    <nameField>
        <displayFormat>S{0000000000}</displayFormat>
        <label>FIC Survey Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FIC Survey Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>