force-app/main/default/objects/FIC_Survey_Application__c/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <label>Amount Requested</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>