force-app/main/default/objects/FIC_Survey_Application__c/fields/Briefly_Describe_Community_Issue__c.field-meta.xml
<CustomField>
    <fullName>Briefly_Describe_Community_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Briefly Describe Community Issue</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>