force-app/main/default/objects/FIC_Survey_Application__c/fields/Briefly_Describe_Funds__c.field-meta.xml
<CustomField>
    <fullName>Briefly_Describe_Funds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Briefly Describe Funds</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>