force-app/main/default/objects/FIC_Survey_Application__c/fields/Community_Investment__c.field-meta.xml
<CustomField>
    <fullName>Community_Investment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Community Investment</label>
    <referenceTo>Community_Giving__c</referenceTo>
    <relationshipLabel>FIC Survey Applications</relationshipLabel>
    <relationshipName>FIC_Survey_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>