force-app/main/default/objects/FIC_Survey_Application__c/fields/Conversion__c.field-meta.xml
<CustomField>
    <fullName>Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Survey Application</label>
    <type>Checkbox</type>
</CustomField>