force-app/main/default/objects/FIC_Survey_Application__c/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>