force-app/main/default/objects/FIC_Survey_Application__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <label>Community Investment Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Flood Relief</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>