force-app/main/default/objects/FIC_Survey_Application__c/fields/Estimated_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Attendance__c</fullName>
    <label>Estimated Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>