force-app/main/default/objects/FIC_Survey_Application__c/fields/Evidence_of_Income_Status__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Income_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evidence of Income Status</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>