force-app/main/default/objects/FIC_Survey_Application__c/fields/Executive_Director__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive Director</label>
    <length>120</length>
    <type>Text</type>
</CustomField>