force-app/main/default/objects/FIC_Survey_Application__c/fields/Executive_Director_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive Director Email Address</label>
    <type>Email</type>
</CustomField>