force-app/main/default/objects/FIC_Survey_Application__c/fields/Executive_Director_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive Director Phone Number</label>
    <type>Phone</type>
</CustomField>