force-app/main/default/objects/FIC_Survey_Application__c/fields/First_National_Bank_Employee_on_Board__c.field-meta.xml
<CustomField>
    <fullName>First_National_Bank_Employee_on_Board__c</fullName>
    <label>First National Bank Employee on Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>