force-app/main/default/objects/FIC_Survey_Application__c/fields/First_National_Bank_Request__c.field-meta.xml
<CustomField>
    <fullName>First_National_Bank_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed to Terms</label>
    <type>Checkbox</type>
</CustomField>