force-app/main/default/objects/FIC_Survey_Application__c/fields/Flood_Anticipated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Flood_Anticipated_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Anticipated End Date</label>
    <type>Date</type>
</CustomField>