force-app/main/default/objects/FIC_Survey_Application__c/fields/Flood_Collaborations__c.field-meta.xml
<CustomField>
    <fullName>Flood_Collaborations__c</fullName>
    <description>Field created for Flood donation website, March 2019.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Collaborations</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>