force-app/main/default/objects/FIC_Survey_Application__c/fields/Flood_Community_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Flood_Community_Focus_Area__c</fullName>
    <description>New field for temporary website</description>
    <label>Flood Community Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementing Housing Solutions</fullName>
            </value>
            <value>
                <fullName>Restoring Economic Activity and Small Business Vitality</fullName>
            </value>
            <value>
                <fullName>Addressing health and human service needs</fullName>
                <label>Addressing Health and Human Service Needs</label>
            </value>
            <value>
                <fullName>Cleaning up and protecting natural resources</fullName>
                <label>Cleaning up and Protecting Natural Resources</label>
            </value>
            <value>
                <fullName>Strengthening infrastructure</fullName>
                <label>Strengthening Infrastructure</label>
            </value>
            <value>
                <fullName>Restoration of Agricultural Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>