force-app/main/default/objects/FIC_Survey_Application__c/fields/Flood_Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>Flood_Counties_Served__c</fullName>
    <description>Counties served for flood donation.  Created for the Flood donation application website</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Counties Served</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>