force-app/main/default/objects/FIC_Survey_Application__c/fields/Flood_Describe_Impact__c.field-meta.xml
<CustomField>
    <fullName>Flood_Describe_Impact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Describe Impact</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>