force-app/main/default/objects/FIC_Survey_Application__c/fields/Flood_Describe_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Flood_Describe_Outcomes__c</fullName>
    <description>Created for flood donation website for applications for donations for flood relief March 2019.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Describe Outcomes</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>