force-app/main/default/objects/FIC_Survey_Application__c/fields/Flood_Volunteer_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Flood_Volunteer_Opportunities__c</fullName>
    <description>Field created for flood donation application website -- March 2019.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Volunteer Opportunities</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>