force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Address_of_Services_or_Activities__c.field-meta.xml
<CustomField>
    <fullName>G_Address_of_Services_or_Activities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address of Services or Activities</label>
    <type>TextArea</type>
</CustomField>