force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Address_of_the_project_center__c.field-meta.xml
<CustomField>
    <fullName>G_Address_of_the_project_center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address of the Project Center</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>