force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Annual_revenues_under_one_million__c.field-meta.xml
<CustomField>
    <fullName>G_Annual_revenues_under_one_million__c</fullName>
    <label>Annual Revenues Under One Million</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>