force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Average_wage_of_jobs_created__c.field-meta.xml
<CustomField>
    <fullName>G_Average_wage_of_jobs_created__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Average Wage of Jobs Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>