force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Average_wage_relate_Median_Family_Inc__c.field-meta.xml
<CustomField>
    <fullName>G_Average_wage_relate_Median_Family_Inc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Average Wage Relate Median Family Income</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>