force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Box_A__c.field-meta.xml
<CustomField>
    <fullName>G_Box_A__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Box A</label>
    <length>50</length>
    <type>Text</type>
</CustomField>