force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Box_B__c.field-meta.xml
<CustomField>
    <fullName>G_Box_B__c</fullName>
    <label>Box B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>