force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Box_C__c.field-meta.xml
<CustomField>
    <fullName>G_Box_C__c</fullName>
    <label>Box C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>