force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Check_Box_Goals_Error__c.field-meta.xml
<CustomField>
    <fullName>G_Check_Box_Goals_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>G_Check_Box_Goals_Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>