force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Collab_Enhance_Your_Program__c.field-meta.xml
<CustomField>
    <fullName>G_Collab_Enhance_Your_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collab Enhance Your Program</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>