force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Community_Need__c.field-meta.xml
<CustomField>
    <fullName>G_Community_Need__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Community Need</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>