force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Demographic_information_on_the_bus__c.field-meta.xml
<CustomField>
    <fullName>G_Demographic_information_on_the_bus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Demographic Information on the Bus</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>