force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Describe_Grant_Funding_Use__c.field-meta.xml
<CustomField>
    <fullName>G_Describe_Grant_Funding_Use__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Describe Grant Funding Use</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>