force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Description_of_Program__c.field-meta.xml
<CustomField>
    <fullName>G_Description_of_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of Program</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>