force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Educated_Workforce__c.field-meta.xml
<CustomField>
    <fullName>G_Educated_Workforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Educated Workforce</label>
    <type>Checkbox</type>
</CustomField>