force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Electronic_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>G_Electronic_Signature_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Electronic Signature Date</label>
    <type>Date</type>
</CustomField>