force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Electronic_Signature_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>G_Electronic_Signature_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Electronic Signature Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>