force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Eligible_for_Free_and_Reduced_Lunch__c.field-meta.xml
<CustomField>
    <fullName>G_Eligible_for_Free_and_Reduced_Lunch__c</fullName>
    <label>Eligible for Free and Reduced Lunch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>