force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Encouraging_Bank_Employee__c.field-meta.xml
<CustomField>
    <fullName>G_Encouraging_Bank_Employee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Encouraging Bank Employee</label>
    <length>120</length>
    <type>Text</type>
</CustomField>