force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Evidence_Based_Practices_Utilized__c.field-meta.xml
<CustomField>
    <fullName>G_Evidence_Based_Practices_Utilized__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evidence-Based Practices Utilized</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>