force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Family_Income_of_the_areas_where_servi__c.field-meta.xml
<CustomField>
    <fullName>G_Family_Income_of_the_areas_where_servi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family Income of the areas where service</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>