force-app/main/default/objects/FIC_Survey_Application__c/fields/G_First_National_Bank_Involved__c.field-meta.xml
<CustomField>
    <fullName>G_First_National_Bank_Involved__c</fullName>
    <label>First National Bank Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>