force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Funding_Primarily_Serve_Youth__c.field-meta.xml
<CustomField>
    <fullName>G_Funding_Primarily_Serve_Youth__c</fullName>
    <label>Funding Primarily Serve Youth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>