force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Geographical_Radius_of_Organization__c.field-meta.xml
<CustomField>
    <fullName>G_Geographical_Radius_of_Organization__c</fullName>
    <label>Geographical Radius of Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>