force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Grant_Submission__c.field-meta.xml
<CustomField>
    <fullName>G_Grant_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grant_Submission</label>
    <type>Checkbox</type>
</CustomField>