force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Income_Thresholds_to_be_Eligible__c.field-meta.xml
<CustomField>
    <fullName>G_Income_Thresholds_to_be_Eligible__c</fullName>
    <label>Income Thresholds to be Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>