force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Involved_Description__c.field-meta.xml
<CustomField>
    <fullName>G_Involved_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Involved Description</label>
    <type>TextArea</type>
</CustomField>