force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Low_or_Moderate_Income_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>G_Low_or_Moderate_Income_Neighborhood__c</fullName>
    <label>Low or Moderate Income Neighborhood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>