force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Measure_Long_Term_Imp_Out__c.field-meta.xml
<CustomField>
    <fullName>G_Measure_Long_Term_Imp_Out__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Measure Long-Term Imp/Out</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>