force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Medicaid_Eligibility_for_Program__c.field-meta.xml
<CustomField>
    <fullName>G_Medicaid_Eligibility_for_Program__c</fullName>
    <label>Medicaid Eligibility for Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>