force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Name_of_Organization_W_9__c.field-meta.xml
<CustomField>
    <fullName>G_Name_of_Organization_W_9__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Organization W-9</label>
    <length>120</length>
    <type>Text</type>
</CustomField>