force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Neighborhood_Revitalization__c.field-meta.xml
<CustomField>
    <fullName>G_Neighborhood_Revitalization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neighborhood Revitalization</label>
    <type>Checkbox</type>
</CustomField>