force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Org_Foundation_Cont_Grants_Fees__c.field-meta.xml
<CustomField>
    <fullName>G_Org_Foundation_Cont_Grants_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org Foundation Cont/Grants/Fees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>