force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Org_Housing_Units_Financed__c.field-meta.xml
<CustomField>
    <fullName>G_Org_Housing_Units_Financed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org Housing Units Financed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>