force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Org_Ind_Rec_Homeownership_Educ__c.field-meta.xml
<CustomField>
    <fullName>G_Org_Ind_Rec_Homeownership_Educ__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org Ind Rec Homeownership Educ</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>