force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Org_Individual_Coaching_Sessions__c.field-meta.xml
<CustomField>
    <fullName>G_Org_Individual_Coaching_Sessions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org Individual Coaching Sessions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>