force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Org_Individual_contributions_grants__c.field-meta.xml
<CustomField>
    <fullName>G_Org_Individual_contributions_grants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org Individual Contributions/Grants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>