force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Org_United_Way__c.field-meta.xml
<CustomField>
    <fullName>G_Org_United_Way__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org United Way</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>