force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Org_Workshops_and_Training_Events__c.field-meta.xml
<CustomField>
    <fullName>G_Org_Workshops_and_Training_Events__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org Workshops and Training Events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>