force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Org_Youth_Provided_Workforce_Career__c.field-meta.xml
<CustomField>
    <fullName>G_Org_Youth_Provided_Workforce_Career__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Org Youth Provided Workforce/Career</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>