force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Organization_Facebook__c.field-meta.xml
<CustomField>
    <fullName>G_Organization_Facebook__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Facebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>