force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Organization_Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>G_Organization_Twitter_Handle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Twitter Handle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>