force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Other_Social_Media_Accounts__c.field-meta.xml
<CustomField>
    <fullName>G_Other_Social_Media_Accounts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Social Media Accounts</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>