force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Plans_to_Sustain_This_Program__c.field-meta.xml
<CustomField>
    <fullName>G_Plans_to_Sustain_This_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plans to Sustain This Program</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>