force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Primary_County_Served__c.field-meta.xml
<CustomField>
    <fullName>G_Primary_County_Served__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary County Served</label>
    <length>120</length>
    <type>Text</type>
</CustomField>